# ppx_monolith

./: .ocamlformat-ignore  CHANGES.md  LICENSE  README.md  dune-project  ppx_monolith.opam
src/: dune  generators.ml  ppx_deriving_monolith.ml  ppx_monolith.ml  printers.ml  raise.ml  specs.ml  utils.ml
test/: dune  mod.ml  test.expected.ml  test.ml
